[project]
name = "mwe-mmc-isspecular"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.1",
    "pandas==2.3.1",
    "matplotlib==3.10.3",
    "scipy==1.16.0",
    "ipython>=9.5.0",
    "ipykernel",
    "notebook>=7.4.5",
    "nbdiff>=1.0.3",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "iso2mesh==0.5.1",
    "pmmc==0.3.6",
    "pmcx==0.6.1",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]           # Allow automatic fixes for all fixable issues
ignore = []                 # Example of ignoring specific rules

[tool.ruff.format]
# The formatter wraps lines at a length of 88.
docstring-code-format = true
quote-style = "double"
docstring-code-line-length = 79

[tool.ruff.pycodestyle]
# E501 reports lines that exceed the length of 100.
max-line-length = 100
max-doc-length = 79
